Fix dat alignment

--- a/core.css
+++ b/core.css
@@ -82,7 +82,7 @@ body {
   position: absolute;
   height: 60px;
   width: 1px;
-  left: 50%;
+  left: calc(50% - 1px);
   background: #fff;
 }
 
